syntax = "proto3";

package entity.v0;

option go_package = "github.com/AnthonyHewins/ton/gen/go/entity/v0;entity";

enum Event {
    EVENT_UNSPECIFIED = 0;
    EVENT_CREATED = 1;
    EVENT_UPDATED = 2;
    EVENT_DELETED = 3;
}

enum EntityType {
    ENTITY_TYPE_UNSPECIFIED = 0;
    ENTITY_TYPE_ACCOUNT = 1;
    ENTITY_TYPE_ACCOUNT_RISK_STATUS = 2;
    ENTITY_TYPE_ADMIN_ALERT = 3;
    ENTITY_TYPE_ADMIN_ALERT_SIGNAL = 4;
    ENTITY_TYPE_CASH_BALANCE = 5;
    ENTITY_TYPE_CASH_BALANCE_LOG = 6;
    ENTITY_TYPE_CHAT = 7;
    ENTITY_TYPE_CHAT_MESSAGE = 8;
    ENTITY_TYPE_CLEARING_HOUSE = 9;
    ENTITY_TYPE_COMMAND = 10;
    ENTITY_TYPE_COMMAND_REPORT = 11;
    ENTITY_TYPE_CONTACT_INFO = 12;
    ENTITY_TYPE_CONTRACT = 13;
    ENTITY_TYPE_CONTRACT_GROUP = 14;
    ENTITY_TYPE_CONTRACT_MARGIN = 15;
    ENTITY_TYPE_CONTRACT_MATURITY = 16;
    ENTITY_TYPE_CURRENCY = 17;
    ENTITY_TYPE_CURRENCY_RATE = 18;
    ENTITY_TYPE_ENTITLEMENT = 19;
    ENTITY_TYPE_EXCHANGE = 20;
    ENTITY_TYPE_EXECUTION_REPORT = 21;
    ENTITY_TYPE_FILL = 22;
    ENTITY_TYPE_FILL_FEE = 23;
    ENTITY_TYPE_FILL_PAIR = 24;
    ENTITY_TYPE_MARGIN_SNAPSHOT = 25;
    ENTITY_TYPE_MARKET_DATA_SUBSCRIPTION = 26;
    ENTITY_TYPE_MARKET_DATA_SUBSCRIPTION_EXCHANGE_SCOPE = 27;
    ENTITY_TYPE_MARKET_DATA_SUBSCRIPTION_PLAN = 28;
    ENTITY_TYPE_ORDER_STRATEGY = 29;
    ENTITY_TYPE_ORDER_STRATEGY_LINK = 30;
    ENTITY_TYPE_ORDER_STRATEGY_TYPE = 31;
    ENTITY_TYPE_ORDER_VERSION = 32;
    ENTITY_TYPE_ORGANIZATION = 33;
    ENTITY_TYPE_PERMISSIONED_ACCOUNT_AUTO_LIQ = 34;
    ENTITY_TYPE_POSITION = 35;
    ENTITY_TYPE_PRODUCT = 36;
    ENTITY_TYPE_PRODUCT_MARGIN = 37;
    ENTITY_TYPE_PRODUCT_SESSION = 38;
    ENTITY_TYPE_PROPERTY = 39;
    ENTITY_TYPE_SECOND_MARKET_DATA_SUBSCRIPTION = 40;
    ENTITY_TYPE_SPREAD_DEFINITION = 41;
    ENTITY_TYPE_TRADING_PERMISSION = 42;
    ENTITY_TYPE_TRADOVATE_SUBSCRIPTION = 43;
    ENTITY_TYPE_TRADOVATE_SUBSCRIPTION_PLAN = 44;
    ENTITY_TYPE_USER = 45;
    ENTITY_TYPE_USER_ACCOUNT_AUTO_LIQ = 46;
    ENTITY_TYPE_USER_ACCOUNT_POSITION_LIMIT = 47;
    ENTITY_TYPE_USER_ACCOUNT_RISK_PARAMETER = 48;
    ENTITY_TYPE_USER_PLUGIN = 49;
    ENTITY_TYPE_USER_PROPERTY = 50;
    ENTITY_TYPE_USER_SESSION = 51;
    ENTITY_TYPE_USER_SESSION_STATS = 52;
}

message Entity {
    Event event = 1;
    EntityType type = 2;
    bytes raw = 3;
}